# law-scrapper-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  start.ps1  start.sh  tatus  test_server_load.py
.github/workflows/: ci.yml
src/law_scrapper_mcp/: __init__.py  __main__.py  config.py  logging_config.py  server.py
src/law_scrapper_mcp/client/: __init__.py  cache.py  circuit_breaker.py  exceptions.py  sejm_client.py
src/law_scrapper_mcp/models/: __init__.py  api_responses.py  enums.py  tool_inputs.py  tool_outputs.py
src/law_scrapper_mcp/services/: __init__.py  act_service.py  changes_service.py  content_processor.py  document_store.py  metadata_service.py  response_enrichment.py  result_store.py  search_service.py
src/law_scrapper_mcp/tools/: __init__.py  act_content.py  act_details.py  act_search.py  browse.py  changes.py  compare.py  dates.py  error_handling.py  filter_results.py  metadata.py  relationships.py  search.py
tests/: TEST_SUITE_SUMMARY.md  conftest.py
tests/fixtures/: act_detail.json  act_references.json  act_structure.json  publishers.json  sample_act.html  search_results.json
tests/integration/: test_http_transport.py  test_tools_e2e.py
tests/unit/: test_cache.py  test_config.py  test_content_processor.py  test_document_store.py  test_models.py  test_server.py
tests/unit/test_services/: test_act_service.py  test_changes_service.py  test_metadata_service.py  test_result_store.py  test_search_service.py
